# SRExam

./: package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: auth.rs  enrollment.rs  main.rs  model.rs  report.rs  room.rs  schedule.rs  scheduler.rs  schema.rs  subject.rs  transaction.rs
src/Views/: Layout.tsx  LoginPage.tsx  ProfilePage.tsx  TransactionDetail.tsx
src/Views/Home/: HomePageAssistant.tsx  HomePageExamCoordinator.tsx  HomePageStudent.tsx  HomePageSubjectDevelopment.tsx
src/Views/Pages/: ExamScheduler.tsx  ReportDetail.tsx  ReportManagement.tsx  RoomManagement.tsx  SubjectManagementPage.tsx  UserManagementPage.tsx  ViewSchedule.tsx  ViewTransactionPage.tsx
src/components/: getLPTheme.tsx  navbar.tsx
src/components/particles/: particles.tsx
src/model/: User.d.ts  reportdetail.d.ts  reportheader.d.ts  room.d.ts  subject.d.ts  transctionheader.d.ts
