[package]
name = "tpa-desktop-dn24-1"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
cynic-codegen = { version = "3" }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
tokio = "1.37.0"
reqwest = { version = "0.11", features = ["blocking"] }
mysql = "25.0.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
async-trait = "0.1.79"
mysql_async = "0.34.1"
ureq = "2.9.6"
reqwest-graphql = "1.0.0"
bcrypt = "0.10.0"
chrono = "0.4.19"
rand = "0.8.5"
multipart = "0.18.0"
base64 = "0.13.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
